# developer-briefing-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  setup.sh
docs/: agentcore-session-experimentation.md  architecture-token-flow.md  cache-flow-diagram.md  demo-idea.md  demo-script.md  memory-architecture.md  prompt-caching.md  skill-mcp-loading.md
docs/architecture/: agent-execution-flow.md  local-vs-agentcore.md  memory-architecture.md  prompt-caching.md  prompt-flow.md  skill-mcp-loading.md  token-flow.md
docs/demo/: demo-script.md
docs/history/: biz-requirement.md  restructure-issues.md
docs/history/plans/: 2026-04-05-ssm-github-token.md
docs/history/specs/: 2026-04-08-agentcore-memory-design.md
docs/specs/: 2026-04-03-strands-briefing-agent-design.md
docs/superpowers/plans/: 2026-04-08-agentcore-memory.md
docs/superpowers/specs/: 2026-04-05-ssm-github-token-design.md
local-agent/: .env.example  chat.py  example_single_shot.py  strands_agent.py
managed-agentcore/: .env.example  01_create_agentcore_runtime.py  02_invoke_agentcore_runtime.py  Dockerfile  agentcore_runtime.py  chat.py  deploy.py  example_invoke.py  requirements.txt
prompts/: system_prompt.md
setup/: create_memory.py  store_github_token.sh
shared/: memory_hooks.py
skills/alex/: SKILL.md
skills/alex/scripts/: github_standup.py
skills/maria/: SKILL.md
skills/maria/scripts/: github_standup.py
skills/sejong/: SKILL.md
skills/sunshin/: SKILL.md
src/: agentcore_runtime.py  strands_agent.py
tests/: demo_flow_test.py
(+2 files in other folders)
