[project]
name = "developer-briefing-agent"
version = "0.1.0"
description = "Developer Briefing Agent using Strands Agents SDK and Amazon Bedrock AgentCore Runtime"
readme = "README.md"
authors = [
    {name = "Gonsoo Moon", email = "your-email@example.com"}
]
requires-python = ">=3.11"
dependencies = [
    "strands-agents>=0.1.0",
    "strands-agents-tools>=0.1.0",
    "bedrock-agentcore>=0.1.0",
    "boto3>=1.34.0",
    "python-dotenv>=1.0.0",
]
